--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["sobitregmi <regmi.sobit@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+uvicorn = "^0.13.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -15,6 +16,7 @@ flake8 = "^3.9.0"
 mypy = "^0.812"
 coverage = "^5.5"
 pre-commit = "^2.11.1"
+fastapi = "^0.63.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
